--- a/cmd/wallet-web/public/index.html
+++ b/cmd/wallet-web/public/index.html
@@ -5,13 +5,12 @@ SPDX-License-Identifier: Apache-2.0
  -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="96x96" href="<%= webpackConfig.output.publicPath %>logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,  maximum-scale=1.0, user-scalable=0">
-    <title>User Agent</title>
     <!--  Fonts and icons     -->
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
